--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,40 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+#DropDown{
+  position: relative;
+  left: 5px;
+  top: 50px;
+}
+
+#root {
+  position: relative;
+  left: 50px;
+  top: 50px;
+}
+
+.slider{
+  border: 3px solid slategray;
+  width: 400px;
+  height: 80px;
+  padding: 0px;
+  position: relative;
+  top: 50px;
+  left: 175px;
+  background: url("./touch.png") no-repeat center;
+  background-size: 13%;
+}
+.slider_inside{
+  margin: 0;
+  padding: 0;
+  display: inline-block; 
+  width: 40px;
+  height: 50px;
+  padding: 0px;
+}
+.player{
+  display: inline-block;            
+  margin-top: 10px;
+  font: 20px serif;
+  height: 400px;
 }
